# MoE-PEFT

./: .gitignore  Dockerfile  Install.md  README.md  evaluator.py  generate.py  inference.py  launch.py  lora_svd.json  loramoe_test.json  mixlora_svd.json  mixlora_test.json  mlora.py  moe_peft.py  mola_test.json  out_weight.txt  pr.json  pr_text.json  prt.json  pyproject.toml  requirements.txt  structure.txt  svd_result: arc_e_1.json  svd_result: boolq_0.json  svd_result: mixlora_svd_arcc_test_0.json  svd_result: obqa_0.json  svd_result: obqa_1.json  svd_result: siqa_0.json  svd_result: test.json  svd_result: wino_0.json  svd_result: wino_1.json  svd_result: ztest.json  svd_result:lora_svd_0.json  svd_result_arc_c_mixlora.json  svd_result_svd_test_total_process.json  t.json  th.json  tlora.json  ts.json  z_ana.py
misc/: finetune-demo.ipynb  inference-demo.ipynb  install-extra-linux.sh  mixlora-demo.ipynb  mmlu_evaluate.py
mlora/: __init__.py  generator.py  model.py  tokenizer.py  trainer.py
moe_peft/: __init__.py  analyst.py  analysts.py  dispatcher.py  evaluator.py  generator.py  model.py  prompter.py  tokenizer.py  trainer.py  utils.py
original_svd_results/: svd_result: arc_c_0.json  svd_result: arc_c_1.json  svd_result: arc_e_0.json  svd_result: boolq_1.json  svd_result: hela_0.json  svd_result: hela_1.json  svd_result: piqa_0.json  svd_result: piqa_1.json  svd_result: siqa_1.json
templates/: lora_glm.json  lora_phi3.json  loramoe.json  loramoe_glm.json  loramoe_phi.json  loramoe_phi3.json  mixlora.json  mixlora_dynamic.json  mixlora_dynamic_glm.json  mixlora_dynamic_phi.json  mixlora_dynamic_phi3.json  mixlora_glm.json  mixlora_phi.json  mixlora_phi3.json  mola.json  mola_glm.json  mola_phi.json  mola_phi3.json
(+73 files in other folders)
